--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>hello world!!</h1>
+
+    <main>
+
+        <div id="title">
+            <h1>Dr. Norman Borlaug</h1>
+            <span>The man who saved a billion lives </span>
+        </div>
+
+
+    </main>
+
   </body>
 </html>
